--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -5,3 +5,86 @@
 .test {
     background-color: red;
 }
+
+.movies-grid {
+    display: flex;
+    flex-wrap: wrap;
+    gap: 20px;
+    justify-content: space-between;
+    padding: 20px;
+}
+
+.movie-container {
+    width: calc(22% - 18px);
+    margin-bottom: 20px;
+}
+
+.movie-card {
+    border: 1px solid #ddd;
+    border-radius: 25px;
+    overflow: hidden;
+    position: relative;
+    width: 100%;
+    height: 400px;
+    cursor: pointer;
+    background-color: #000;
+    image-rendering: auto;
+}
+
+.overlay {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    opacity: 0;
+    transition: opacity 0.3s ease;
+    pointer-events: none;
+}
+
+.movie-card:hover .overlay {
+    opacity: 1;
+}
+
+.poster-image {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+}
+
+.backdrop-image {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+}
+
+.movie-details {
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    width: 100%;
+    background-color: rgba(0, 0, 0, 0.8);
+    color: #fff;
+    padding: 10px;
+    box-sizing: border-box;
+    opacity: 0;
+    transition: opacity 0.3s ease;
+    overflow: auto;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+
+.movie-card:hover .movie-details {
+    opacity: 1;
+}
+
+.movie-details p {
+    margin: 5px 0;
+    text-align: left;
+}
+
+.movie-card h3 {
+    margin: 10px 0;
+}
