--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -3,13 +3,21 @@
 @tailwind utilities;
 
 @font-face {
-    font-family: "Poppins Medium";
+    font-family: "Poppins-Medium";
     font-style: normal;
     font-weight: normal;
     src: url("/fonts/Poppins-Medium.ttf") format("ttf");
 }
+
 @font-face {
-    font-family: "Poppins ExtraLigth";
+    font-family: "Poppins-Bold";
+    font-style: normal;
+    font-weight: 600;
+    src: url("/fonts/Poppins-Bold.ttf") format("ttf");
+}
+
+@font-face {
+    font-family: "Poppins-ExtraLigth";
     font-style: normal;
     font-weight: 200;
     src: url("/fonts/Poppins-ExtraLight") format("ttf");
@@ -31,7 +39,7 @@ html {
 
 body {
     min-height: 100dvh;
-    font-family: Poppins, sans-serif;
+    font-family: Poppins-Medium, sans-serif;
 }
 input,
 button,
@@ -118,7 +126,7 @@ svg {
     gap: 2.5rem;
 }
 
-/* BOTÓN LOGIN */
+/* BOTÓN LOGIN Y REGISTER*/
 
 .button-login {
     padding: 0.8rem;
@@ -129,7 +137,7 @@ svg {
     font-weight: 700;
     border: none;
     transition: all 0.2s;
-    font-family: Poppins, sans-serif;
+    font-family: Poppins-Medium, sans-serif;
 }
 
 .button-login:hover {
@@ -191,6 +199,168 @@ svg {
 @media screen and (min-width: 320px) and (max-width: 500px) {
     .react-carousel-card {
         width: 80%;
+    }
+}
+
+/* COMPONENTE LOGIN */
+
+.form {
+    height: 100vh;
+    display: flex;
+    justify-content: space-between;
+    color: #093266;
+    font-family: Poppins-Bold, sans-serif;
+}
+
+.title-form {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
+    width: 50%;
+    padding: 2rem;
+    font-family: var(--main-font-regular);
+    background-color: #fff;
+}
+
+.login-form {
+    display: flex;
+    flex-direction: column;
+    gap: 2.5rem;
+    width: 33.8rem;
+}
+
+.login-form h2 {
+    text-align: center;
+    font-weight: 600;
+    font-size: 3rem;
+}
+
+.login-form label {
+    text-transform: uppercase;
+    font-weight: 600;
+    font-size: 1.3rem;
+    letter-spacing: 0.05rem;
+    color: #093266;
+    margin-bottom: 1rem;
+}
+
+.login-form input {
+    min-width: 5rem;
+    font-size: 1.6rem;
+    padding: 1rem;
+    border-radius: 2rem;
+    border-color: #c3e2dc;
+    background-color: #fff !important;
+}
+
+.login-form input:focus {
+    box-shadow: 0 0 10px #c3e2dc;
+    border-color: #c3e2dc;
+    outline: #c3e2dc;
+}
+
+.login-form input::placeholder {
+    color: #cfcaca;
+}
+
+.title {
+    font-size: 2.4rem;
+    margin-bottom: 2rem;
+}
+
+.image-form {
+    width: 50%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background-color: #fff1ef;
+}
+
+.image-form img {
+    object-fit: cover;
+    width: 100%;
+    height: 100%;
+    background-position: center;
+}
+
+@media screen and (min-width: 375px) and (max-width: 992px) {
+    .form {
+        flex-direction: column-reverse;
+        align-items: center;
+    }
+
+    .title-form {
+        width: 95%;
+        padding: 2rem 0;
+    }
+
+    .login-form {
+        width: 33.8rem;
+        gap: 1rem;
+        margin-top: 1rem;
+    }
+
+    .image-form {
+        width: 100%;
+        height: 32rem;
+    }
+
+    .image-form img {
+        object-fit: contain;
+        width: 100%;
+        height: 100%;
+        background-position: center;
+    }
+
+    .title {
+        font-size: 2rem;
+    }
+
+    .login-form input {
+        min-width: 3rem;
+        font-size: 1.6rem;
+        padding: 0.7rem;
+    }
+}
+
+@media screen and (min-width: 320px) and (max-width: 375px) {
+    .form {
+        flex-direction: column-reverse;
+        align-items: center;
+    }
+
+    .title-form {
+        width: 95%;
+        padding: 2rem 0;
+    }
+
+    .login-form {
+        width: 29rem;
+        gap: 1rem;
+        margin-top: 1rem;
+    }
+
+    .image-form {
+        width: 100%;
+        height: 32rem;
+    }
+
+    .image-form img {
+        object-fit: contain;
+        width: 100%;
+        height: 100%;
+        background-position: center;
+    }
+
+    .title {
+        font-size: 2rem;
+    }
+
+    .login-form input {
+        min-width: 3rem;
+        font-size: 1.6rem;
+        padding: 0.7rem;
     }
 }
 
