--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -83,6 +83,7 @@ body {
     min-height: 100dvh;
     font-family: Poppins-Regular, sans-serif;
 }
+
 input,
 button,
 textarea,
@@ -307,7 +308,7 @@ svg {
     min-width: 1rem;
 }
 
-.remember-form span {
+.remember-login-form span {
     color: #093266;
 }
 
@@ -640,6 +641,7 @@ svg {
 .home-container {
     width: 100%;
     padding: 0;
+    height: auto;
 }
 .home-container-image {
     padding: 0;
@@ -763,6 +765,45 @@ svg {
 .bg-green-500 {
     font-size: 1.5rem;
     font-family: Poppins-Regular, sans-serif;
+}
+
+.alert-message-info {
+    font-size: 2rem;
+    font-family: Poppins-Regular, sans-serif;
+    display: flex;
+    justify-content: center;
+    padding: 4rem;
+    color: #093266;
+}
+
+.alert-recommendations {
+    display: flex;
+    flex-wrap: wrap;
+    align-items: center;
+    flex-direction: column;
+}
+
+.alert-recommendations img {
+    width: 10rem;
+}
+
+.alert-info {
+    display: flex;
+    flex-wrap: wrap;
+    align-items: center;
+    flex-direction: column;
+    height: 50vh;
+}
+.alert-info img {
+    width: 10rem;
+}
+.alert-message-recommendations {
+    font-size: 2rem;
+    font-family: Poppins-Regular, sans-serif;
+    display: flex;
+    justify-content: center;
+    padding: 4rem;
+    color: #093266;
 }
 
 /* COMPONENTE NAVLINK */
@@ -891,6 +932,9 @@ svg {
     }
 }
 @media screen and (min-width: 320px) and (max-width: 639px) {
+    .responsive-nav-text {
+        text-transform: uppercase;
+    }
     .nav-content {
         display: flex;
         justify-content: space-between;
@@ -913,6 +957,7 @@ svg {
         color: #093266;
         font-size: 1.4rem;
         font-weight: 600;
+        text-transform: uppercase;
     }
     .block a:hover,
     a:active {
@@ -922,11 +967,13 @@ svg {
         color: #093266;
         font-size: 1.4rem;
         font-weight: 600;
+        text-transform: uppercase;
     }
     .mt-3 button {
         color: #093266;
         font-size: 1.4rem;
         font-weight: 600;
+        text-transform: uppercase;
     }
     .mt-3 button:hover,
     button:active {
@@ -940,13 +987,13 @@ svg {
     display: flex;
     align-items: center;
     justify-content: space-around;
-    height: 100vh;
     padding: 8rem 8rem;
     flex-wrap: wrap;
     gap: 6rem;
 }
 
 .friends-card {
+    position: relative;
     display: flex;
     align-items: center;
     width: 54rem;
@@ -954,6 +1001,15 @@ svg {
     border-radius: 3rem;
     border: 0.4rem solid #c3e2dc;
     color: #093266;
+    cursor: pointer;
+}
+.more-icon {
+    position: absolute;
+    top: 1.5rem;
+    right: 1.5rem;
+    font-size: 2.4rem;
+    color: #093266;
+    cursor: pointer;
 }
 
 .friends-card img {
@@ -1022,7 +1078,7 @@ svg {
     .container-friends-card {
         flex-direction: row;
         gap: 14rem;
-        padding: 18rem 2.5rem 0rem 2.5rem;
+        padding: 18rem 2.5rem 10rem 2.5rem;
     }
     .friends-card {
         padding-left: 5rem;
@@ -1148,8 +1204,9 @@ svg {
 
 .movie-card-title {
     display: flex;
-    flex-direction: row;
+    flex-direction: column;
     justify-content: center;
+    align-items: center;
     gap: 1rem;
     font-family: Raleway-SemiBold, sans-serif;
     font-size: 2rem;
@@ -1159,6 +1216,11 @@ svg {
 .movie-card-title h3 {
     margin: 10px 0;
     text-align: center;
+}
+
+.movie-card-head {
+    display: flex;
+    gap: 3rem;
 }
 
 .pagination {
@@ -1205,6 +1267,10 @@ svg {
 }
 
 /* COMPONENTE BUSCAR */
+
+.search-page {
+    min-height: 50vh;
+}
 
 .search-add-content {
     padding: 5rem 0;
@@ -1461,7 +1527,7 @@ svg {
 
 .button-delete {
     padding: 1.5rem 10.4rem;
-    background: #red;
+    background: red;
     color: white;
     font-size: 1.6rem;
     border-radius: 2rem;
@@ -1485,4 +1551,197 @@ svg {
     box-shadow: 0 0.5rem 1rem rgba(0, 0, 0, 0.2);
     background: #fff;
     color: #f37136;
+}
+
+@media screen and (min-width: 320px) and (max-width: 424px) {
+    .button-delete {
+        padding: 1.5rem 5rem;
+    }
+    .button-profile {
+        padding: 0.9rem;
+        text-align: center;
+        display: inherit;
+    }
+}
+
+/* FOOTER */
+
+.footer {
+    display: flex;
+    flex-direction: column;
+    margin-top: auto;
+}
+
+.footer-container {
+    padding: 4% 5%;
+    background-color: #c3e2dc;
+    width: 100%;
+    display: flex;
+    flex-wrap: nowrap;
+    flex-direction: column;
+    text-align: center;
+    gap: 1.5rem;
+    font-size: 1.4rem;
+    margin-top: auto;
+}
+
+.footer-text {
+    display: flex;
+    flex-direction: column;
+    gap: 1.5rem;
+    font-family: Poppins-Regular, sans-serif;
+    color: #093266;
+}
+
+.footer-link {
+    display: flex;
+    justify-content: center;
+    gap: 3.5rem;
+    color: #093266;
+}
+.footer-logo {
+    display: flex;
+    justify-content: center;
+    align-content: center;
+    flex-wrap: wrap;
+}
+
+.footer-logo img {
+    max-width: 6rem;
+}
+
+/* COMPONENTE STARRATING */
+
+.star-rating {
+    display: flex;
+    align-items: center;
+    gap: 0.2rem;
+}
+
+.star-icon.filled {
+    color: #f8d12d;
+}
+
+.star-icon.half {
+    color: #f8d12d;
+}
+
+.star-icon.empty {
+    color: #f8d12d;
+}
+
+.stars {
+    display: flex;
+}
+
+/* UserFavouritesDetail */
+
+/* NUEVO CSS DE POPUP */
+.detail-overlay {
+    position: fixed;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    background: rgba(0, 0, 0, 0.9);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    z-index: 1000;
+}
+
+.detail-content {
+    background-color: #c3e2dc;
+    padding: 3rem;
+    border-radius: 3rem;
+    max-width: 80rem;
+    width: 90%;
+    overflow-y: auto;
+    max-height: 90%;
+    position: relative;
+    display: flex;
+    flex-direction: column;
+}
+
+.detail-content h2 {
+    font-size: 2.6rem;
+    font-family: Raleway-Bold, sans-serif;
+    color: #093266;
+}
+
+.close-button {
+    position: absolute;
+    top: 1.5rem;
+    right: 1.5rem;
+    background: transparent;
+    border: none;
+    font-size: 24px;
+    cursor: pointer;
+    z-index: 1;
+    color: #093266;
+}
+
+.user-movies-list {
+    display: flex;
+    flex-wrap: wrap;
+    gap: 2rem;
+    justify-content: space-around;
+    padding: 2rem 0;
+}
+
+.movie-item {
+    display: flex;
+    align-items: center;
+    width: 100%;
+    margin-bottom: 2rem;
+    background-color: #fff;
+    padding: 3rem;
+    border-radius: 3rem;
+}
+
+.movie-poster {
+    width: 15rem;
+    height: auto;
+    border-radius: 2rem;
+    flex-shrink: 0;
+}
+
+.details-movie {
+    flex: 1;
+    margin-left: 2rem;
+}
+
+.details-movie h3 {
+    font-family: Raleway-SemiBold, sans-serif;
+    font-size: 2rem;
+    margin: 0.5rem 0rem 0.5rem;
+    color: #093266;
+}
+
+.details-movie p {
+    font-size: 1.5rem;
+    font-family: Raleway-Regular, sans-serif;
+    color: #093266;
+    line-height: 1.6;
+    overflow-y: auto;
+    max-height: 20rem;
+    opacity: 0.9;
+    margin-bottom: 1rem;
+}
+
+.created-at {
+    font-size: 1.5rem;
+    color: #093266;
+    font-family: Raleway-Regular, sans-serif;
+}
+
+@media screen and (max-width: 719px) {
+    .movie-item {
+        flex-direction: column;
+        gap: 1rem;
+    }
+    .details-movie {
+        margin: 0;
+        text-align: center;
+    }
 }
